website/code/recursive-gcj.log
BUILD COMMANDS FOR: recursive.gcj

Fri Mar 31 01:38:41 PST 2006

/usr/bin/gcj -O3 -fomit-frame-pointer -funroll-loops -o recursive.gcj_run --main=recursive recursive.java
recursive.java: In class 'recursive':
recursive.java: In method 'recursive.main(java.lang.String[])':
recursive.java:16: error: Can't find method 'printf(Ljava/lang/String;II)' in type 'java.io.PrintStream'.
       System.out.printf("Ack(3,%d): %d\n", n, ack(3, n));
                 ^
recursive.java:17: error: Can't find method 'printf(Ljava/lang/String;DD)' in type 'java.io.PrintStream'.
       System.out.printf("Fib(%.1f): %.1f\n", 27.0 + n, fib(27.0 + n));
                 ^
recursive.java:20: error: Can't find method 'printf(Ljava/lang/String;IIII)' in type 'java.io.PrintStream'.
       System.out.printf("Tak(%d,%d,%d): %d\n", n * 3, n * 2, n, tak(n * 3, n * 2, n));
                 ^
recursive.java:22: error: Can't find method 'printf(Ljava/lang/String;I)' in type 'java.io.PrintStream'.
       System.out.printf("Fib(3): %d\n", fib(3));
                 ^
recursive.java:23: error: Can't find method 'printf(Ljava/lang/String;D)' in type 'java.io.PrintStream'.
       System.out.printf("Tak(3.0,2.0,1.0): %.1f\n", tak(3.0, 2.0, 1.0));
                 ^
5 errors
make[3]: [recursive.gcj_run] Error 1 (ignored)
rm recursive.java

=================================================================
COMMAND LINE (%A is single numeric argument):

recursive.gcj_run %A
Error, could not exec recursive.gcj_run 3 (No such file or directory)
PATH=/opt/shootout/shootout/bench/recursive:/opt/shootout/shootout/bench/recursive/tmp:/opt/xds_x86/bin:/opt/intel/fc/9.0/bin:/opt/intel/cc/9.0/bin:/usr/lib/poplog/current-poplog/pop/pop:/usr/lib/smarteiffel/bin:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games:/usr/lib/poplog/current-poplog/pop/com
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
